--- a/线框图jpg/线框图html/官网/static/css/bussiness.css
+++ b/线框图jpg/线框图html/官网/static/css/bussiness.css
@@ -3,7 +3,7 @@
     line-height:  60px;
     background-color: #d6d6d6;
     margin-top: 120px;
-    color: #CF524E;
+    color: rgb(233, 85, 19);
 }
 
 .container-info
