--- a/线框图jpg/线框图html/官网/static/css/news.css
+++ b/线框图jpg/线框图html/官网/static/css/news.css
@@ -50,12 +50,12 @@
 .service_active a, .active a
 {
     font-weight: bold;
-    color:#CF524E;
+    color:rgb(233, 85, 19);
 }
 
 .title
 {
-    color:#CF524E;
+    color:rgb(233, 85, 19);
     font-size: 25px;
 }
 
