--- a/线框图jpg/线框图html/官网/static/css/active.css
+++ b/线框图jpg/线框图html/官网/static/css/active.css
@@ -79,12 +79,12 @@ h1
 .service_active a
 {
     font-weight: bold;
-    color:#CF524E;
+    color:rgb(233, 85, 19);
 }
 
 .title
 {
-    color:#CF524E;
+    color:rgb(233, 85, 19);
     font-size: 25px;
 }
 
