--- a/线框图jpg/线框图html/官网/static/css/hostpage.css
+++ b/线框图jpg/线框图html/官网/static/css/hostpage.css
@@ -10,9 +10,8 @@
 }
 
 .swiper-slide
-{
-     line-height: 650px;
-     text-align: center;
+{ 
+     text-align: left;
 }
 
 .right-sider-bar
@@ -25,14 +24,12 @@
 .fa{
     color:white;
 }
-.bar-point
-{
-    width: 40px;
-    height: 40px;
-    border-radius: 20px;
-    background-color: gray;
-    margin:0 auto;
+
+.fa-side{
+    color:gray;
+    font-size: 20px;
 }
+
 
 .bar-table td{
     text-align: center;
@@ -54,3 +51,52 @@
     bottom: 80px;
     right: 90px;
 }
+
+.h1_product_name, .h3_product_name
+{
+    color: gray;
+}
+.p_title{
+    font-family: -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+}
+.white_span, .yellow_span
+{
+    font-weight: thin;  
+    font-size: 70px;
+     
+}
+
+.white_span{
+    color: white;
+}
+
+.yellow_span
+{
+    color: rgb(233, 85, 19);
+}
+
+
+.learn_more
+{
+    border-bottom: 3px solid white;
+}
+
+.h3_product_name
+{
+    font-size: 14px;
+    margin:0;
+}
+.h1_product_name
+{
+   margin-bottom:0;
+}
+.sider1
+{
+    position: absolute;
+    bottom: 60px;
+    left: 60px;
+}
+
