--- a/线框图jpg/线框图html/官网/static/css/base.css
+++ b/线框图jpg/线框图html/官网/static/css/base.css
@@ -1,10 +1,9 @@
 
 /* 菜单设置开始*/
-.menu{
+.menu, .menu-holder{
     min-height: 60px;
     line-height: 60px;
-    padding-right: 20px;
-    overflow: hidden;
+    padding-right: 20px; 
     width: 100%;
     position: fixed;
     top: 0;
