--- a/线框图jpg/线框图html/官网/static/css/faith.css
+++ b/线框图jpg/线框图html/官网/static/css/faith.css
@@ -30,7 +30,34 @@
 .col-content
 {
     color : white;
-    margin-top: 150px;
+    margin-top: 180px;
+    text-align: center;
 }
 
- 
+.swiper-slide
+{
+     background-repeat:repeat;  
+}
+
+.swiper-slide img{
+    width: 100%;
+}
+.silder_tips
+{
+    position: absolute;
+    bottom: 10px;
+    right: 100px;
+    font-size: 30px;
+    color: white;
+}
+.scroll-down, .scroll-up
+{
+    position: absolute;
+    bottom: 5px;
+    right: 23px;
+    z-index: 3;
+}
+.sec_h1
+{
+    margin-top: 50px;
+}
