--- a/线框图jpg/线框图html/官网/static/css/footer.css
+++ b/线框图jpg/线框图html/官网/static/css/footer.css
@@ -6,11 +6,13 @@
 table .first{
     font-weight: bold;
     color:#d6d6d6;
+    font-size: 15px;
 }
 
 .linkitems a
 {
     color: gray;
+    font-size: 13px;
 }
 
 .linkitems tr{
