--- a/线框图jpg/线框图html/官网/static/css/pics.css
+++ b/线框图jpg/线框图html/官网/static/css/pics.css
@@ -5,8 +5,7 @@
     box-shadow: 0 1px 1px rgba(0,0,0,.05);
  }
 .content
-{ 
-    width: 100%;
+{  
     background-color: #3C3D3F;
 }
 
@@ -17,7 +16,7 @@
 
 .swiper-slide
 {
-     line-height: 650px;
+     line-height: 350px;
      text-align: center;
 }
  
@@ -45,7 +44,8 @@
 .container-title
 {
     margin-top: 100px;
-    height: 60px; 
+    height: 120px;
+    padding-top: 30px;
     width: 100%;
     background-color: #d6d6d6;
 }
@@ -65,9 +65,16 @@
 }
 
 .title
-{
+{ 
+    color: gray;
+    font-size: 20px;
+    margin: 10px 0;
+}
+
+.title_head
+{ 
     color:rgb(233, 85, 19);
-    font-size: 25px;
+    font-size: 25px ;
 }
 
  
@@ -104,4 +111,15 @@
 
 .item-view{
     background-color: #8B92A0;
+}
+
+.img-holder
+{
+    width: 100%;
+    height: 220px;
+    background-color: gray;
+}
+.col-nopadding
+{
+    padding:0;
 }
