--- a/线框图jpg/论坛_07_04/论坛_0705/css/user_center.css
+++ b/线框图jpg/论坛_07_04/论坛_0705/css/user_center.css
@@ -36,7 +36,7 @@
     margin-top:30px; 
 }
 .userinfo_tab_nav>span{
-    background-color: #ccc;
+    background-color: #d4d4d4;
     color:#fff;
     font-size: 14px;
     font-weight: 600;
