--- a/线框图jpg/论坛_07_04/论坛_0705/css/m_css/m_base.css
+++ b/线框图jpg/论坛_07_04/论坛_0705/css/m_css/m_base.css
@@ -1,13 +1,36 @@
-body {
+/* 
+ * 通用
+ */
+ body {
     background-color: rgb(239, 239, 239);
-    font-family: 微软雅黑;
-    margin: 0;
+    margin-bottom:52px;
     padding:0;
 }
+.active-orange:link{
+    color:rgb(254, 112, 60);
+}
+.orange {
+    color:rgb(254, 112, 60);  
+}
+ul{
+    margin: 0px;
+    padding: 0px;
+    list-style-type: none;
+}
+.orange-btn{
+    background-color: rgb(254, 112, 60);
+    color: #fff;
+    text-align: center;
+    padding: 6px 18px;
+    border: 0px;
+}
+/* 
+ * 页头
+ */
 header{
     border-top: 4px solid rgb(254, 112, 60);
     background-color: rgb(64, 64, 64);
-    color:#fff;
+    color:#fefefe;
     font-size: 18px;
 }
 header .logo{
@@ -18,7 +41,50 @@ header .fa-search{
     line-height: 60px;
     margin-right: 15px;
 }
-
+/* 
+ * 页脚
+ */
 footer{
-    background-color: rgb(144, 145, 146);
+    margin-top: 15px;
+    font-size: 16px;
+}
+
+footer a{
+    padding: 0px 10px;
+    color:rgb(78, 78, 78);
+}
+.black-border{
+    border-right: rgb(78, 78, 78) solid 1px;
+}
+.f10{
+    font-size: 10px;
+}
+/* 菜单 */
+nav li.back{
+    width: 10%;
+    margin:0px;
+}
+nav .fa{
+    margin-right: 6px;
+}
+nav{
+    position: fixed;
+    bottom:0;
+    width: 100%;
+    font-size: 16px;
+    background-color: rgb(254, 112, 60);
+    color: #fff;
+    padding:6px 0;
+    overflow: hidden;
+}
+nav>a{
+    color: inherit;
+    text-align: center;
+    padding:4px 0;
+}
+.right-border{
+    border-right: #fff solid 1px;
+}
+.act-grey{
+    color: rgb(187, 187, 188);
 }
