--- a/线框图jpg/论坛_07_04/论坛_0705/css/m_css/m_base.css
+++ b/线框图jpg/论坛_07_04/论坛_0705/css/m_css/m_base.css
@@ -5,6 +5,7 @@
     background-color: rgb(239, 239, 239);
     margin-bottom:52px;
     padding:0;
+    position: relative;
 }
 .active-orange:link{
     color:rgb(254, 112, 60);
@@ -75,16 +76,68 @@ nav{
     background-color: rgb(254, 112, 60);
     color: #fff;
     padding:6px 0;
-    overflow: hidden;
+    z-index: 10;
 }
 nav>a{
     color: inherit;
     text-align: center;
     padding:4px 0;
+    position: relative;
 }
 .right-border{
     border-right: #fff solid 1px;
 }
-.act-grey{
-    color: rgb(187, 187, 188);
+
+nav a:active,nav a:hover,nav a:focus,nav a:visited{
+    text-decoration:none;
+    color: inherit;
+}
+.hide-menu{
+    position: absolute;
+    top:-310%;
+    left: 0.5px;
+    z-index: 100;
+    background-color: #fff;
+    padding:5px 10px 10px;
+    border-radius: 6px;
+    border:1px solid #ccc;
+    color: #333;
+    display: none;
+}
+.hide-menu a{
+    display: block;
+    padding: 5px 0;
+    border-bottom: 1px solid #ccc;
+    color: inherit;
+}
+.hide-menu::after{
+  content: '';
+  border-left: 1px solid #ccc;
+  border-bottom:1px solid #ccc; 
+  position: absolute;
+  bottom: -11px;
+  right: 50%;
+  width: 12px;
+  height: 12px;
+  background-color: #fff;
+  transform:rotate(-45deg) translateX(50%);
+  -ms-transform:rotate(-45deg) translateX(50%); 	/* IE 9 */
+  -moz-transform:rotate(-45deg) translateX(50%); 	/* Firefox */
+  -webkit-transform:rotate(-45deg) translateX(50%); /* Safari 和 Chrome */
+  -o-transform:rotate(-45deg) translateX(50%);
+}
+/* 回到顶部 */
+#to_top {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    padding: 8px;
+    font: 20px/20px arial;
+    text-align: center;
+    background: #fff;
+    border: 1px solid #ccc;
+    position: fixed;
+    bottom:100px;
+    right: 15px;
+    display: none;
 }
