--- a/线框图jpg/论坛_07_04/论坛_0705/css/m_css/m_home.css
+++ b/线框图jpg/论坛_07_04/论坛_0705/css/m_css/m_home.css
@@ -51,6 +51,7 @@
  */
     .content{
         background-color: #fff;
+        padding-bottom: 15px;
     }
     .post-list{
         margin-top: 15px;
@@ -71,7 +72,7 @@
     }
     .summary-title{
         font-size: 16px;
-        color:rgb(233, 85, 19);
+        color: #333;
         margin-bottom: 4px; 
     }
     .post-summary{
