修改不能发帖的bug

--- a/论坛项目/template/forum/forum/post.htm
+++ b/论坛项目/template/forum/forum/post.htm
@@ -220,6 +220,7 @@
 				<!--{subtemplate forum/post_editor_body}-->
 
 				<!--{hook/post_middle}-->
+				<!--{subtemplate forum/post_editor_attribute}-->
 
 				
 
