--- a/线框图jpg/论坛_07_04/论坛_0705/css/m_css/m_publish.css
+++ b/线框图jpg/论坛_07_04/论坛_0705/css/m_css/m_publish.css
@@ -42,14 +42,14 @@
     }
     /* 编辑内容 */
     .reply-btn {
-        background-color: rgb(254, 112, 60);
-        border-color: rgb(253, 99, 42);
-        border: 1px;
-        color: #fff;
+        border:1px solid rgb(254, 112, 60);
+        color: rgb(254, 112, 60);
         text-align: center;
-        padding: 6px 18px; 
+        padding: 6px 20px; 
         display: block;
         margin: 0 auto;
         font-size: 18px;
+        background-color: #fff;
+        width: 150px;
     }
     
