--- a/线框图jpg/论坛_07_04/论坛_0705/css/m_css/m_base.css
+++ b/线框图jpg/论坛_07_04/论坛_0705/css/m_css/m_base.css
@@ -13,6 +13,9 @@
 .orange {
     color:rgb(254, 112, 60);  
 }
+.active-grye:link{
+    color: #888;
+}
 ul{
     margin: 0px;
     padding: 0px;
@@ -33,13 +36,13 @@ header{
     background-color: rgb(64, 64, 64);
     color:#fefefe;
     font-size: 18px;
+    height: 60px;
 }
 header .logo{
-    margin: 15px;
-    height: 30px;
+    height: 56px;
 }
 header .fa-search{
-    line-height: 60px;
+    line-height: 56px;
     margin-right: 15px;
 }
 /* 
@@ -49,7 +52,9 @@ footer{
     margin-top: 15px;
     font-size: 16px;
 }
-
+footer div{
+    padding:2px 0;
+}
 footer a{
     padding: 0px 10px;
     color:rgb(78, 78, 78);
@@ -140,4 +145,8 @@ nav a:active,nav a:hover,nav a:focus,nav a:visited{
     bottom:100px;
     right: 15px;
     display: none;
+}
+#icon-user{
+    width: 20px;
+    vertical-align:top;
 }
