--- a/线框图jpg/论坛_07_04/论坛_0705/css/m_css/m_details.css
+++ b/线框图jpg/论坛_07_04/论坛_0705/css/m_css/m_details.css
@@ -1,14 +1,14 @@
 /* 回复按钮 */
 .reply-btn {
-    background-color: rgb(254, 112, 60);
-    border-color: rgb(253, 99, 42);
-    border: 1px;
-    color: #fff;
+    border:1px solid rgb(254, 112, 60);
+    color: rgb(254, 112, 60);
     text-align: center;
-    padding: 6px 18px; 
+    padding: 6px 20px; 
     display: block;
     margin: 0 auto;
     font-size: 18px;
+    background-color: inherit;
+    width: 150px;
 }
 
 /* 
