--- a/线框图jpg/论坛_07_04/论坛_0705/css/m_css/m_forum.css
+++ b/线框图jpg/论坛_07_04/论坛_0705/css/m_css/m_forum.css
@@ -40,6 +40,7 @@ ul{
 */
 .content{
     background-color: #fff;
+    padding-bottom: 15px;
 }
 .post-list{
     margin-top: 15px;
@@ -60,7 +61,7 @@ ul{
 }
 .summary-title{
     font-size: 16px;
-    color:rgb(233, 85, 19);
+    color:#333;
     margin-bottom: 4px; 
 }
 .post-summary{
